[package]
name = "forever-rs"
version = "0.1.0"
edition = "2021"
authors = ["tickbh <tickdream125@hotmail.com>"]
description = "The complete solution for Rust command-line interfaces"
repository = "https://github.com/tickbh/Commander"
homepage = "https://github.com/tickbh/Commander"
license = "MIT/Apache-2.0"
keywords = ["forever", "forever rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.7"
quote = "1"
syn = { version = "1.0.90", features = ["full"] }
commander = "0.1.5"